# minikonoha

./: CMakeLists.txt
include/minikonoha/: minikonoha.h  platform_posix.h
module/Jansson/: CMakeLists.txt
package/dscript.shell/: shell_glue.k  shell_kick.k
package/dscript.shell/test/: CommandReplaceExpression.k
package/dscript.subproc/: subproc_glue.c
package/dscript.util/: CMakeLists.txt  util_glue.k
package/dse2/: CMakeLists.txt  dse2_glue.c
package/dse2/test/: EventGenerator.k  EventSender.k  JoinTest.k
package/konoha.global/: global_glue.c
package/posix.fd/: fd_glue.c
package/posix.file/: file_glue.c
package/posix.process/: process_glue.c
package/sugar/: sugar_glue.c
platform/dse/: README.md  dse.c
platform/logger-shell/: CMakeLists.txt  command.c  procps.h
platform/logger-shell/ext/procps-3.2.8/: Makefile
platform/logger-shell/include/: procps.h
src/gc/: bmgc.h
src/package-devel/MiniKonoha.ExceptionEvent/: CMakeLists.txt  ExceptionEvent_glue.c
src/package-devel/MiniKonoha.ExceptionEvent/sample/: RuntimeScriptException.k
src/package-devel/konoha.event/: CMakeLists.txt  event_glue.c
src/sugar/: token.h
src/vm/: vm.h
